media: Stop sending if-match headers for media fetch requests.

Sending if-match headers disables caching, so stop doing that
until we can think of a better solution.

BUG=689989, 504194

Review-Url: https://codereview.chromium.org/2714583002
Cr-Commit-Position: refs/heads/master@{#452323}

Former-commit-id: 9974e4f50017f116c3696ce9cc38680e77ac14f1